[package]
name = "skit"
version = "0.3.0"
edition = "2024"
description = "Security Kit - Secure secrets management for development (Linux/macOS, limited Windows support)"
license = "MIT"
authors = ["Z Strike <hello@zstrike.io>"]
repository = "https://github.com/zstrikehq/skit"
homepage = "https://github.com/zstrikehq/skit"
documentation = "https://github.com/zstrikehq/skit#readme"
readme = "README.md"
keywords = ["security", "secrets", "cli", "environment", "crypto"]
categories = ["command-line-utilities", "cryptography", "development-tools"]
exclude = [
    "dist/",
    "target/",
    ".github/",
    "*.safe",
    "BUILD_WINDOWS.md",
    "SELF_HOSTED_CI.md",
    "homebrew-formula.rb"
]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"
crossterm = "0.27"
argon2 = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
filetime = "0.2"
zeroize = "1.8.1"

# AWS SDK dependencies
aws-config = "1.5"
aws-sdk-ssm = "1.47"
tokio = { version = "1", features = ["full"] }

[target.'cfg(windows)'.dependencies]
winres = "0.1"           # Windows resource compiler for metadata

[build-dependencies]
winres = "0.1"           # For Windows builds

[dev-dependencies]
tempfile = "3.0"         # For testing

[profile.release]
# Optimize for size and security
opt-level = "z"          # Optimize for size
lto = true               # Link-time optimization
codegen-units = 1        # Single codegen unit for better optimization
panic = "abort"          # Smaller binaries, no unwinding
strip = true             # Remove debug symbols and metadata
